--- a/Resources/translations/in_situ.fr.xlf
+++ b/Resources/translations/in_situ.fr.xlf
@@ -14,6 +14,18 @@
                 <source>Editor</source>
                 <target>Edition en ligne</target>
             </trans-unit>
+            <trans-unit id="4">
+                <source>Are you sure?</source>
+                <target>Etees vous sûr ?</target>
+            </trans-unit>
+            <trans-unit id="5">
+                <source>Yes, delete it!</source>
+                <target>Oui !</target>
+            </trans-unit>
+            <trans-unit id="6">
+                <source>Done, you'll never hear of it again :)</source>
+                <target>Supprimé !</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
