[TRANSLATION] Fix a typo

--- a/Resources/translations/in_situ.fr.xlf
+++ b/Resources/translations/in_situ.fr.xlf
@@ -16,7 +16,7 @@
             </trans-unit>
             <trans-unit id="4">
                 <source>Are you sure?</source>
-                <target>Etees vous sûr ?</target>
+                <target>Etes vous sûr ?</target>
             </trans-unit>
             <trans-unit id="5">
                 <source>Yes, delete it!</source>
